--- a/public/css/Component/CenterManager/CenterManager_Complaints_History.css
+++ b/public/css/Component/CenterManager/CenterManager_Complaints_History.css
@@ -13,7 +13,7 @@
         color: inherit;
     }
 
-    
+
     #dashboard i {
         color: var(--green-color-one);
     }
@@ -186,7 +186,7 @@
         margin-left: 5px;
     }
 
-    .mark_as_read button:hover{
+    .mark_as_read button:hover {
         color: var(--button-hover-green);
     }
 
@@ -251,13 +251,13 @@
     }
 
     .table-header {
-        grid-template-columns: 15% 30% 30% 25%;
+        grid-template-columns: 15% 15% 15% 25% 15% 15%;
     }
 
     .table-row {
         height: 52px;
         display: grid;
-        grid-template-columns:  15% 30% 30% 25%;
+        grid-template-columns: 15% 15% 15% 25% 15% 15%;
     }
 
     .table td {
@@ -280,8 +280,8 @@
         border-radius: 50%;
     }
 
-       /*Empty table UI*/
-       .main-right-bottom-two {
+    /*Empty table UI*/
+    .main-right-bottom-two {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -359,13 +359,13 @@
         }
 
 
-        .main-right-top-profile img{
+        .main-right-top-profile img {
             width: 40px;
             height: 40px;
             margin-top: 3px;
         }
 
-        .main-right{
+        .main-right {
             overflow-x: hidden;
         }
     }
@@ -401,7 +401,7 @@
             width: 28%;
         }
 
-        .main-right-top-profile-cont p{
+        .main-right-top-profile-cont p {
             font-size: 12px;
         }
     }
@@ -430,16 +430,16 @@
             right: 10%;
         }
 
-        .main-right-top-four-component p{
+        .main-right-top-four-component p {
             display: none;
 
         }
 
-        .main-right-top-four-component{
+        .main-right-top-four-component {
             width: auto;
         }
 
-      
+
     }
 
     @media screen and (max-width:540px) {
@@ -461,55 +461,55 @@
             left: 15%;
         }
 
-        .main-right-top-four-left{
+        .main-right-top-four-left {
             margin-left: 35px;
             padding-left: 0;
         }
 
-        .main-right-top-four-left button{
+        .main-right-top-four-left button {
             width: 60px;
         }
 
-        .main-right-top-four-left p{
+        .main-right-top-four-left p {
             display: none;
         }
 
-        .main-right-top-four-right{
+        .main-right-top-four-right {
             margin-right: 40%;
         }
 
-        .main-right-top-profile-cont h3{
+        .main-right-top-profile-cont h3 {
             font-size: 16px;
         }
 
-        .line{
+        .line {
             margin-left: -10px !important;
         }
 
-       
 
-      
+
+
     }
 
     @media screen and (max-width: 475px) {
-        .main-right-top-profile-cont h3{
+        .main-right-top-profile-cont h3 {
             display: none;
         }
 
-        .main-right-top-profile-cont p{
+        .main-right-top-profile-cont p {
             display: none;
         }
 
-        .main-right-top-profile img{
+        .main-right-top-profile img {
             margin-right: 5px;
         }
 
-        .main-right-top-three-content{
+        .main-right-top-three-content {
             margin-right: 0;
 
         }
 
-        .main-right-top-three-content p{
+        .main-right-top-three-content p {
             font-size: 12px;
         }
 
@@ -519,6 +519,7 @@
         .main-right-top-notification {
             margin-left: 5%;
         }
+
         .main-right-top-search {
             margin-left: 1px;
         }
@@ -541,7 +542,7 @@
     }
 
     @media screen and (max-width:700px) {
-    
+
         .main-right-top-search {
             width: 35%;
         }
@@ -556,11 +557,11 @@
             margin-left: 10px;
         }
 
-        .main-right-top-three{
+        .main-right-top-three {
             margin-bottom: 2%;
         }
 
-        .line{
+        .line {
             margin-left: -20px;
         }
     }
