--- a/public/css/Component/Customer/Customer_Complain_History.css
+++ b/public/css/Component/Customer/Customer_Complain_History.css
@@ -10,14 +10,13 @@
     }
 
     .table-header {
-        grid-template-columns: 20% 20% 20% 40%;
+        grid-template-columns: 10% 10% 15% 25% 15% 15% 10%;
     }
 
-
     .table-row {
-        height: 45px;
-        grid-template-columns: 20% 20% 20% 40%;
-        border-bottom: 1px solid var(--background-color-two);
+        height: 52px;
+        display: grid;
+        grid-template-columns: 10% 10% 15% 25% 15% 15% 10%;
     }
 
     .table td {
@@ -27,6 +26,50 @@
         overflow-x: none !important;
         overflow-y: scroll !important;
     }
+
+    .update_click {
+        position: fixed;
+        top: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, 0.1);
+        z-index: 5;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+
+    }
+
+    .popup-form {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 50%;
+        height: 500px;
+        border-radius: 10px;
+        background-color: var(--background-color-main);
+    }
+
+    .popup-form h1 {
+        font-size: 15px;
+    }
+
+    .button {
+        width: 50%;
+        margin-right: 20px;
+        padding: 10px 0;
+        background: var(--green-color-one);
+        color: var(--background-color-main);
+        border: 0;
+        outline: none;
+        font-size: 18px;
+        border-radius: 4px;
+        cursor: pointer;
+        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+    }
+
 
     @media screen and (max-width:700px) {
         .table-header {
