--- a/public/css/Component/Customer/Customer_Complains.css
+++ b/public/css/Component/Customer/Customer_Complains.css
@@ -76,6 +76,8 @@
             align-items: center;
             justify-content: center;
             overflow: hidden !important;
+            padding: 30px;
+            height: 750px;
         }
 
         .main-bottom-component {
@@ -88,6 +90,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            margin-top: 20px;
+            margin-bottom: 20px;
         }
 
         .main-bottom-component {
